FIX: blue on iphone

--- a/assets/sass/components/_how.sass
+++ b/assets/sass/components/_how.sass
@@ -21,6 +21,7 @@
                 color: $white
                 font-size: 16px
                 margin-bottom: 20px
+                color: $white
 
             & span
                 color: #3aa5ff
