--- a/assets/sass/components/_nav.sass
+++ b/assets/sass/components/_nav.sass
@@ -78,6 +78,7 @@
             @include bold
             font-size: 24px
             margin-bottom: 5px
+            color: $white
 
 @keyframes shine2 
   0% 
